--- a/style.css
+++ b/style.css
@@ -5,15 +5,21 @@
 body{
     font-family: "Poppins", sans-serif;
 }
+footer{
+    background-color: black;
+    padding: 15px 0;
+    text-align: center;
+}
 .cabecalho{
     background-color: #383D58;
     color:white;
     display: flex;
     justify-content: space-around;
-    padding: 24px 0;
 }
 .cabecalho-imagem{
-    width: 20%;
+    position: relative;
+    top: 50px;
+    left: 150px;
 }
 .cabecalho-lista-item{
     display: inline-block;
@@ -44,5 +50,19 @@ body{
 .estudante-icone{
     width: 24px;
 }
+
+.estudante-titulo{
+    text-align: center;
+    padding: 50px 0;
+}
+.estudante-todos{
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20%;
+}
+.rodape-imagem{
+    width:24px ;
+    height:80px ;
+}
+
 
 
