--- a/style.css
+++ b/style.css
@@ -1,68 +1,31 @@
+:root{
+    --branco-principal:#ffffff;
+    --cinza-secundario:#C0C0C0;
+    --botao-azul:#167BF7;
+    --cor-de-fundo:#00030C;
+}
 *{
     margin: 0;
     padding: 0;
 }
 body{
-    font-family: "Poppins", sans-serif;
+    background-color: var(--cor-de-fundo);
+    color: var(--branco-principal);
 }
-footer{
-    background-color: black;
-    padding: 15px 0;
-    text-align: center;
+.principal{
+    background-image: url("img/Background.png");
+    background-repeat: no-repeat;
+    background-size: contain;
 }
-.cabecalho{
-    background-color: #383D58;
-    color:white;
-    display: flex;
-    justify-content: space-around;
-}
-.cabecalho-imagem{
-    position: relative;
-    top: 50px;
-    left: 150px;
-}
-.cabecalho-lista-item{
-    display: inline-block;
-    margin: 0 16px;
-    padding: 24px 0;
-    font-size: 24px;
-}
-.escola-imagem{
-    width: 25%;
-}
-.escola{
-    background-image: linear-gradient(#383D58,#00C0EB);
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 24px 0;
-}
-.escola-conteudo{
-    width: 35%;
-}
-.escola-titulo{
-    padding: 24px 0;
-}
-.estudante-imagem{
-    width: 120px;
-}
-.estudante-icone{
-    width: 24px;
-}
-
-.estudante-titulo{
-    text-align: center;
-    padding: 50px 0;
-}
-.estudante-todos{
+.container{
+    height: 100vh;
     display: grid;
-    grid-template-columns: 20% 20% 20% 20%;
+    grid-template-columns: 50% 50%
 }
-.rodape-imagem{
-    width:24px ;
-    height:80px ;
+.container-botao{
+    background-color: var(--botao-azul);
+    border-radius: 5px;
+    padding: 1em;
+    color: var(--branco-principal);
+    display: block;
 }
-
-
-
