--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 :root{
-    --branco-principal:#ffffff;
+    --branco-principal:#FFFFFF;
     --cinza-secundario:#C0C0C0;
     --botao-azul:#167BF7;
     --cor-de-fundo:#00030C;
+    --fonte-principal:'Inter';
 }
 *{
     margin: 0;
@@ -11,16 +12,21 @@
 body{
     background-color: var(--cor-de-fundo);
     color: var(--branco-principal);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
 }
 .principal{
     background-image: url("img/Background.png");
     background-repeat: no-repeat;
     background-size: contain;
+    align-items: center;
+    text-align: center;
 }
 .container{
     height: 100vh;
     display: grid;
-    grid-template-columns: 50% 50%
+    grid-template-columns: 40% 60%;
 }
 .container-botao{
     background-color: var(--botao-azul);
@@ -28,4 +34,24 @@ body{
     padding: 1em;
     color: var(--branco-principal);
     display: block;
+    text-decoration: none;
+    margin-bottom: 1em;
+}
+.botao-secundario{
+    background-color: transparent;
+    border: 2px solid var(--branco-principal);
+}
+.container-aviso{
+    color: var(--cinza-secundario);
+    font-size: 12px;
+}
+.container-titulo{
+    font-size: 28px;
+    font-weight: 700;
+}
+.container-imagem{
+    margin: 1em 0 2em 0;
+}
+.container-caixa{
+    margin: 0 6em;
 }
